files/examples/error/missing_variable.t
def main() : 
    int i
    j := 5
end